@@ -1,44 +1,44 @@
-package no.entur.uttu.config;
+package no.entur.uttu.security;
 
 import java.util.Arrays;
-import org.entur.oauth2.JwtRoleAssignmentExtractor;
-import org.rutebanken.helper.organisation.RoleAssignmentExtractor;
+import java.util.List;
+import no.entur.uttu.security.spi.FullAccessUserContextService;
+import no.entur.uttu.security.spi.UserContextService;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-@Configuration
-@Profile("local")
+@Profile("local-no-authentication")
+@Component
 public class LocalSecurityConfiguration {
-
-  @Bean
-  public RoleAssignmentExtractor roleAssignmentExtractor() {
-    return new JwtRoleAssignmentExtractor();
-  }
 
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
     return http
       .csrf(AbstractHttpConfigurer::disable)
-      .authorizeHttpRequests(auth -> auth.anyRequest().permitAll())
       .cors(cors -> cors.configurationSource(corsConfigurationSource()))
       .build();
   }
 
-  CorsConfigurationSource corsConfigurationSource() {
+  private CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
     configuration.addAllowedOriginPattern("*");
     configuration.setAllowedMethods(Arrays.asList("GET", "POST"));
-    configuration.setAllowedHeaders(Arrays.asList("*"));
-    configuration.setExposedHeaders(Arrays.asList("*"));
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setExposedHeaders(List.of("*"));
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
     return source;
+  }
+
+  @Bean
+  public UserContextService userContextService() {
+    return new FullAccessUserContextService();
   }
 }
